sdcc/src/SDCCy.output
Terminals unused in grammar

   DOUBLE
   RANGE
   SD_FAR
   IFX
   ADDRESS_OF
   GET_VALUE_AT_ADDRESS
   SPIL
   UNSPIL
   GETHBIT
   GETABIT
   GETBYTE
   GETWORD
   BITWISEAND
   UNARYMINUS
   IPUSH
   IPOP
   PCALL
   ENDFUNCTION
   JUMPTABLE
   RRC
   RLC
   CAST
   CALL
   PARAM
   NULLOP
   BLOCK
   LABEL
   RECEIVE
   SEND
   ARRAYINIT
   DUMMY_READ_VOLATILE
   ENDCRITICAL
   SWAP
   GENERIC_ASSOC_LIST
   GENERIC_ASSOCIATION


State 93 conflicts: 2 shift/reduce
State 97 conflicts: 1 shift/reduce
State 276 conflicts: 1 shift/reduce
State 277 conflicts: 1 shift/reduce
State 520 conflicts: 1 shift/reduce


Grammar

    0 $accept: file $end

    1 file: /* empty */
    2     | program

    3 program: external_definition
    4        | program external_definition

    5 external_definition: function_definition
    6                    | declaration
    7                    | addressmod

    8 $@1: /* empty */

    9 function_definition: function_declarator $@1 function_body

   10 $@2: /* empty */

   11 function_definition: declaration_specifiers function_declarator $@2 function_body

   12 function_attribute: function_attributes
   13                   | function_attributes function_attribute

   14 function_attributes: USING constant_expr
   15                    | REENTRANT
   16                    | CRITICAL
   17                    | NAKED
   18                    | JAVANATIVE
   19                    | OVERLAY
   20                    | NONBANKED
   21                    | SHADOWREGS
   22                    | SD_WPARAM
   23                    | BANKED
   24                    | Interrupt_storage
   25                    | TRAP
   26                    | SMALLC
   27                    | Z88DK_FASTCALL
   28                    | Z88DK_CALLEE
   29                    | PRESERVES_REGS '(' identifier_list ')'

   30 function_body: compound_statement
   31              | declaration_list compound_statement

   32 offsetof_member_designator: identifier

   33 $@3: /* empty */

   34 offsetof_member_designator: offsetof_member_designator '.' $@3 identifier
   35                           | offsetof_member_designator '[' expr ']'

   36 primary_expr: identifier
   37             | CONSTANT
   38             | string_literal_val
   39             | '(' expr ')'
   40             | generic_selection

   41 generic_selection: GENERIC '(' assignment_expr ',' generic_assoc_list ')'

   42 generic_assoc_list: generic_association
   43                   | generic_assoc_list ',' generic_association

   44 generic_association: type_name ':' assignment_expr
   45                    | DEFAULT ':' assignment_expr

   46 string_literal_val: STRING_LITERAL

   47 postfix_expr: primary_expr
   48             | postfix_expr '[' expr ']'
   49             | postfix_expr '(' ')'
   50             | postfix_expr '(' argument_expr_list ')'

   51 $@4: /* empty */

   52 postfix_expr: postfix_expr '.' $@4 identifier

   53 $@5: /* empty */

   54 postfix_expr: postfix_expr PTR_OP $@5 identifier
   55             | postfix_expr INC_OP
   56             | postfix_expr DEC_OP

   57 argument_expr_list: assignment_expr
   58                   | assignment_expr ',' argument_expr_list

   59 unary_expr: postfix_expr
   60           | INC_OP unary_expr
   61           | DEC_OP unary_expr
   62           | unary_operator cast_expr
   63           | SIZEOF unary_expr
   64           | SIZEOF '(' type_name ')'
   65           | ALIGNOF '(' type_name ')'
   66           | TYPEOF unary_expr
   67           | OFFSETOF '(' type_name ',' offsetof_member_designator ')'

   68 unary_operator: '&'
   69               | '*'
   70               | '+'
   71               | '-'
   72               | '~'
   73               | '!'

   74 cast_expr: unary_expr
   75          | '(' type_name ')' cast_expr

   76 multiplicative_expr: cast_expr
   77                    | multiplicative_expr '*' cast_expr
   78                    | multiplicative_expr '/' cast_expr
   79                    | multiplicative_expr '%' cast_expr

   80 additive_expr: multiplicative_expr
   81              | additive_expr '+' multiplicative_expr
   82              | additive_expr '-' multiplicative_expr

   83 shift_expr: additive_expr
   84           | shift_expr LEFT_OP additive_expr
   85           | shift_expr RIGHT_OP additive_expr

   86 relational_expr: shift_expr
   87                | relational_expr '<' shift_expr
   88                | relational_expr '>' shift_expr
   89                | relational_expr LE_OP shift_expr
   90                | relational_expr GE_OP shift_expr

   91 equality_expr: relational_expr
   92              | equality_expr EQ_OP relational_expr
   93              | equality_expr NE_OP relational_expr

   94 and_expr: equality_expr
   95         | and_expr '&' equality_expr

   96 exclusive_or_expr: and_expr
   97                  | exclusive_or_expr '^' and_expr

   98 inclusive_or_expr: exclusive_or_expr
   99                  | inclusive_or_expr '|' exclusive_or_expr

  100 logical_and_expr: inclusive_or_expr

  101 $@6: /* empty */

  102 logical_and_expr: logical_and_expr AND_OP $@6 inclusive_or_expr

  103 logical_or_expr: logical_and_expr

  104 $@7: /* empty */

  105 logical_or_expr: logical_or_expr OR_OP $@7 logical_and_expr

  106 conditional_expr: logical_or_expr

  107 $@8: /* empty */

  108 conditional_expr: logical_or_expr '?' $@8 expr ':' conditional_expr

  109 assignment_expr: conditional_expr
  110                | cast_expr assignment_operator assignment_expr

  111 assignment_operator: '='
  112                    | MUL_ASSIGN
  113                    | DIV_ASSIGN
  114                    | MOD_ASSIGN
  115                    | ADD_ASSIGN
  116                    | SUB_ASSIGN
  117                    | LEFT_ASSIGN
  118                    | RIGHT_ASSIGN
  119                    | AND_ASSIGN
  120                    | XOR_ASSIGN
  121                    | OR_ASSIGN

  122 expr: assignment_expr

  123 $@9: /* empty */

  124 expr: expr ',' $@9 assignment_expr

  125 constant_expr: conditional_expr

  126 declaration: declaration_specifiers ';'
  127            | declaration_specifiers init_declarator_list ';'
  128            | static_assert_declaration ';'

  129 declaration_specifiers: declaration_specifiers_

  130 declaration_specifiers_: storage_class_specifier
  131                        | storage_class_specifier declaration_specifiers_
  132                        | type_specifier
  133                        | type_specifier declaration_specifiers_
  134                        | function_specifier
  135                        | function_specifier declaration_specifiers_
  136                        | alignment_specifier
  137                        | alignment_specifier declaration_specifiers_

  138 init_declarator_list: init_declarator
  139                     | init_declarator_list ',' init_declarator

  140 init_declarator: declarator
  141                | declarator '=' initializer

  142 designation_opt: /* empty */
  143                | designation

  144 designation: designator_list '='

  145 designator_list: designator
  146                | designator_list designator

  147 designator: '[' constant_expr ']'
  148           | '.' identifier

  149 storage_class_specifier: TYPEDEF
  150                        | EXTERN
  151                        | STATIC
  152                        | AUTO
  153                        | REGISTER

  154 function_specifier: INLINE
  155                   | NORETURN

  156 alignment_specifier: ALIGNAS '(' type_name ')'
  157                    | ALIGNAS '(' constant_expr ')'

  158 Interrupt_storage: INTERRUPT
  159                  | INTERRUPT constant_expr

  160 type_qualifier: SD_CONST
  161               | RESTRICT
  162               | VOLATILE
  163               | ADDRSPACE_NAME
  164               | XDATA
  165               | CODE
  166               | EEPROM
  167               | DATA
  168               | IDATA
  169               | PDATA

  170 type_qualifier_list: type_qualifier
  171                    | type_qualifier_list type_qualifier

  172 type_specifier: type_qualifier
  173               | SD_BOOL
  174               | SD_CHAR
  175               | SD_SHORT
  176               | SD_INT
  177               | SD_LONG
  178               | SIGNED
  179               | UNSIGNED
  180               | SD_VOID
  181               | SD_FLOAT
  182               | FIXED16X16
  183               | BIT
  184               | AT constant_expr
  185               | struct_or_union_specifier
  186               | enum_specifier
  187               | TYPE_NAME
  188               | sfr_reg_bit

  189 sfr_reg_bit: SBIT
  190            | sfr_attributes

  191 sfr_attributes: SFR
  192               | SFR BANKED
  193               | SFR16
  194               | SFR32

  195 $@10: /* empty */

  196 struct_or_union_specifier: struct_or_union opt_stag $@10 '{' struct_declaration_list '}'
  197                          | struct_or_union stag

  198 struct_or_union: STRUCT
  199                | UNION

  200 opt_stag: stag
  201         | /* empty */

  202 stag: identifier

  203 struct_declaration_list: struct_declaration
  204                        | struct_declaration_list struct_declaration

  205 struct_declaration: type_specifier_list struct_declarator_list ';'

  206 struct_declarator_list: struct_declarator
  207                       | struct_declarator_list ',' struct_declarator

  208 struct_declarator: declarator
  209                  | ':' constant_expr
  210                  | declarator ':' constant_expr
  211                  | /* empty */

  212 enum_specifier: ENUM '{' enumerator_list '}'
  213               | ENUM identifier '{' enumerator_list '}'
  214               | ENUM identifier

  215 enumerator_list: enumerator
  216                | enumerator_list ','
  217                | enumerator_list ',' enumerator

  218 enumerator: identifier opt_assign_expr

  219 opt_assign_expr: '=' constant_expr
  220                | /* empty */

  221 declarator: declarator3
  222           | pointer declarator3

  223 declarator3: declarator2_function_attributes
  224            | declarator2

  225 function_declarator: declarator2_function_attributes
  226                    | pointer declarator2_function_attributes

  227 declarator2_function_attributes: function_declarator2
  228                                | function_declarator2 function_attribute

  229 declarator2: identifier
  230            | '(' declarator ')'
  231            | declarator3 '[' ']'
  232            | declarator3 '[' type_qualifier_list ']'
  233            | declarator3 '[' constant_expr ']'
  234            | declarator3 '[' STATIC constant_expr ']'
  235            | declarator3 '[' type_qualifier_list constant_expr ']'
  236            | declarator3 '[' STATIC type_qualifier_list constant_expr ']'
  237            | declarator3 '[' type_qualifier_list STATIC constant_expr ']'

  238 function_declarator2: declarator2 '(' ')'

  239 $@11: /* empty */

  240 function_declarator2: declarator2 '(' $@11 parameter_type_list ')'
  241                     | declarator2 '(' identifier_list ')'

  242 pointer: unqualified_pointer
  243        | unqualified_pointer type_specifier_list
  244        | unqualified_pointer pointer
  245        | unqualified_pointer type_specifier_list pointer

  246 unqualified_pointer: '*'

  247 type_specifier_list: type_specifier_list_

  248 type_specifier_list_: type_specifier
  249                     | type_specifier_list_ type_specifier

  250 identifier_list: identifier
  251                | identifier_list ',' identifier

  252 parameter_type_list: parameter_list
  253                    | parameter_list ',' VAR_ARGS

  254 parameter_list: parameter_declaration
  255               | parameter_list ',' parameter_declaration

  256 parameter_declaration: declaration_specifiers declarator
  257                      | type_name

  258 type_name: declaration_specifiers
  259          | declaration_specifiers abstract_declarator

  260 abstract_declarator: pointer
  261                    | abstract_declarator2
  262                    | pointer abstract_declarator2

  263 abstract_declarator2: '(' abstract_declarator ')'
  264                     | '[' ']'
  265                     | '[' constant_expr ']'
  266                     | abstract_declarator2 '[' ']'
  267                     | abstract_declarator2 '[' constant_expr ']'
  268                     | '(' ')'
  269                     | '(' parameter_type_list ')'
  270                     | abstract_declarator2 '(' ')'

  271 $@12: /* empty */

  272 abstract_declarator2: abstract_declarator2 '(' $@12 parameter_type_list ')'

  273 initializer: assignment_expr
  274            | '{' initializer_list '}'
  275            | '{' initializer_list ',' '}'

  276 initializer_list: designation_opt initializer
  277                 | initializer_list ',' designation_opt initializer

  278 static_assert_declaration: STATIC_ASSERT '(' constant_expr ',' STRING_LITERAL ')'

  279 statement: labeled_statement
  280          | compound_statement
  281          | expression_statement
  282          | selection_statement
  283          | iteration_statement
  284          | jump_statement
  285          | critical_statement
  286          | asm_statement

  287 critical: CRITICAL

  288 critical_statement: critical statement

  289 labeled_statement: label statement
  290                  | label '}'

  291 label: identifier ':'
  292      | CASE constant_expr ':'

  293 @13: /* empty */

  294 label: DEFAULT @13 ':'

  295 start_block: '{'

  296 end_block: '}'

  297 compound_statement: start_block end_block
  298                   | start_block statement_list end_block
  299                   | start_block declaration_list end_block
  300                   | start_block declaration_list statement_list end_block
  301                   | error ';'

  302 declaration_list: declaration
  303                 | declaration_list declaration

  304 statement_list: statement
  305               | statement_list statement

  306 expression_statement: ';'
  307                     | expr ';'

  308 else_statement: ELSE statement
  309               | /* empty */

  310 $@14: /* empty */

  311 selection_statement: IF '(' expr ')' $@14 statement else_statement

  312 @15: /* empty */

  313 selection_statement: SWITCH '(' expr ')' @15 statement

  314 while: WHILE

  315 do: DO

  316 for: FOR

  317 $@16: /* empty */

  318 iteration_statement: while '(' expr ')' $@16 statement
  319                    | do statement WHILE '(' expr ')' ';'
  320                    | for '(' expr_opt ';' expr_opt ';' expr_opt ')' statement

  321 $@17: /* empty */

  322 iteration_statement: for '(' declaration expr_opt ';' expr_opt ')' $@17 statement

  323 expr_opt: /* empty */
  324         | expr

  325 jump_statement: GOTO identifier ';'
  326               | CONTINUE ';'
  327               | BREAK ';'
  328               | RETURN ';'
  329               | RETURN expr ';'

  330 asm_string_literal: STRING_LITERAL

  331 asm_statement: ASM '(' asm_string_literal ')' ';'
  332              | INLINEASM ';'

  333 addressmod: ADDRESSMOD identifier identifier ';'
  334           | ADDRESSMOD identifier SD_CONST identifier ';'

  335 identifier: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'!' (33) 73
'%' (37) 79
'&' (38) 68 95
'(' (40) 29 39 41 49 50 64 65 67 75 156 157 230 238 240 241 263 268
    269 270 272 278 311 313 318 319 320 322 331
')' (41) 29 39 41 49 50 64 65 67 75 156 157 230 238 240 241 263 268
    269 270 272 278 311 313 318 319 320 322 331
'*' (42) 69 77 246
'+' (43) 70 81
',' (44) 41 43 58 67 124 139 207 216 217 251 253 255 275 277 278
'-' (45) 71 82
'.' (46) 34 52 148
'/' (47) 78
':' (58) 44 45 108 209 210 291 292 294
';' (59) 126 127 128 205 301 306 307 319 320 322 325 326 327 328 329
    331 332 333 334
'<' (60) 87
'=' (61) 111 141 144 219
'>' (62) 88
'?' (63) 108
'[' (91) 35 48 147 231 232 233 234 235 236 237 264 265 266 267
']' (93) 35 48 147 231 232 233 234 235 236 237 264 265 266 267
'^' (94) 97
'{' (123) 196 212 213 274 275 295
'|' (124) 99
'}' (125) 196 212 213 274 275 290 296
'~' (126) 72
error (256) 301
IDENTIFIER (258) 335
TYPE_NAME (259) 187
ADDRSPACE_NAME (260) 163
CONSTANT (261) 37
SIZEOF (262) 63 64
ALIGNOF (263) 65
TYPEOF (264) 66
OFFSETOF (265) 67
PTR_OP (266) 54
INC_OP (267) 55 60
DEC_OP (268) 56 61
LEFT_OP (269) 84
RIGHT_OP (270) 85
LE_OP (271) 89
GE_OP (272) 90
EQ_OP (273) 92
NE_OP (274) 93
AND_OP (275) 102
OR_OP (276) 105
MUL_ASSIGN (277) 112
DIV_ASSIGN (278) 113
MOD_ASSIGN (279) 114
ADD_ASSIGN (280) 115
SUB_ASSIGN (281) 116
LEFT_ASSIGN (282) 117
RIGHT_ASSIGN (283) 118
AND_ASSIGN (284) 119
XOR_ASSIGN (285) 120
OR_ASSIGN (286) 121
TYPEDEF (287) 149
EXTERN (288) 150
STATIC (289) 151 234 236 237
AUTO (290) 152
REGISTER (291) 153
CODE (292) 165
EEPROM (293) 166
INTERRUPT (294) 158 159
SFR (295) 191 192
SFR16 (296) 193
SFR32 (297) 194
ADDRESSMOD (298) 333 334
STATIC_ASSERT (299) 278
AT (300) 184
SBIT (301) 189
REENTRANT (302) 15
USING (303) 14
XDATA (304) 164
DATA (305) 167
IDATA (306) 168
PDATA (307) 169
VAR_ARGS (308) 253
CRITICAL (309) 16 287
NONBANKED (310) 20
BANKED (311) 23 192
SHADOWREGS (312) 21
SD_WPARAM (313) 22
SD_BOOL (314) 173
SD_CHAR (315) 174
SD_SHORT (316) 175
SD_INT (317) 176
SD_LONG (318) 177
SIGNED (319) 178
UNSIGNED (320) 179
SD_FLOAT (321) 181
DOUBLE (322)
FIXED16X16 (323) 182
SD_CONST (324) 160 334
VOLATILE (325) 162
SD_VOID (326) 180
BIT (327) 183
STRUCT (328) 198
UNION (329) 199
ENUM (330) 212 213 214
RANGE (331)
SD_FAR (332)
CASE (333) 292
DEFAULT (334) 45 294
IF (335) 311
ELSE (336) 308
SWITCH (337) 313
WHILE (338) 314 319
DO (339) 315
FOR (340) 316
GOTO (341) 325
CONTINUE (342) 326
BREAK (343) 327
RETURN (344) 328 329
NAKED (345) 17
JAVANATIVE (346) 18
OVERLAY (347) 19
TRAP (348) 25
STRING_LITERAL (349) 46 278 330
INLINEASM (350) 332
IFX (351)
ADDRESS_OF (352)
GET_VALUE_AT_ADDRESS (353)
SPIL (354)
UNSPIL (355)
GETHBIT (356)
GETABIT (357)
GETBYTE (358)
GETWORD (359)
BITWISEAND (360)
UNARYMINUS (361)
IPUSH (362)
IPOP (363)
PCALL (364)
ENDFUNCTION (365)
JUMPTABLE (366)
RRC (367)
RLC (368)
CAST (369)
CALL (370)
PARAM (371)
NULLOP (372)
BLOCK (373)
LABEL (374)
RECEIVE (375)
SEND (376)
ARRAYINIT (377)
DUMMY_READ_VOLATILE (378)
ENDCRITICAL (379)
SWAP (380)
INLINE (381) 154
NORETURN (382) 155
RESTRICT (383) 161
SMALLC (384) 26
PRESERVES_REGS (385) 29
Z88DK_FASTCALL (386) 27
Z88DK_CALLEE (387) 28
ALIGNAS (388) 156 157
GENERIC (389) 41
GENERIC_ASSOC_LIST (390)
GENERIC_ASSOCIATION (391)
ASM (392) 331


Nonterminals, with rules where they appear

$accept (162)
    on left: 0
file (163)
    on left: 1 2, on right: 0
program (164)
    on left: 3 4, on right: 2 4
external_definition (165)
    on left: 5 6 7, on right: 3 4
function_definition (166)
    on left: 9 11, on right: 5
$@1 (167)
    on left: 8, on right: 9
$@2 (168)
    on left: 10, on right: 11
function_attribute (169)
    on left: 12 13, on right: 13 228
function_attributes (170)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29, on right:
    12 13
function_body (171)
    on left: 30 31, on right: 9 11
offsetof_member_designator (172)
    on left: 32 34 35, on right: 34 35 67
$@3 (173)
    on left: 33, on right: 34
primary_expr (174)
    on left: 36 37 38 39 40, on right: 47
generic_selection (175)
    on left: 41, on right: 40
generic_assoc_list (176)
    on left: 42 43, on right: 41 43
generic_association (177)
    on left: 44 45, on right: 42 43
string_literal_val (178)
    on left: 46, on right: 38
postfix_expr (179)
    on left: 47 48 49 50 52 54 55 56, on right: 48 49 50 52 54 55 56
    59
$@4 (180)
    on left: 51, on right: 52
$@5 (181)
    on left: 53, on right: 54
argument_expr_list (182)
    on left: 57 58, on right: 50 58
unary_expr (183)
    on left: 59 60 61 62 63 64 65 66 67, on right: 60 61 63 66 74
unary_operator (184)
    on left: 68 69 70 71 72 73, on right: 62
cast_expr (185)
    on left: 74 75, on right: 62 75 76 77 78 79 110
multiplicative_expr (186)
    on left: 76 77 78 79, on right: 77 78 79 80 81 82
additive_expr (187)
    on left: 80 81 82, on right: 81 82 83 84 85
shift_expr (188)
    on left: 83 84 85, on right: 84 85 86 87 88 89 90
relational_expr (189)
    on left: 86 87 88 89 90, on right: 87 88 89 90 91 92 93
equality_expr (190)
    on left: 91 92 93, on right: 92 93 94 95
and_expr (191)
    on left: 94 95, on right: 95 96 97
exclusive_or_expr (192)
    on left: 96 97, on right: 97 98 99
inclusive_or_expr (193)
    on left: 98 99, on right: 99 100 102
logical_and_expr (194)
    on left: 100 102, on right: 102 103 105
$@6 (195)
    on left: 101, on right: 102
logical_or_expr (196)
    on left: 103 105, on right: 105 106 108
$@7 (197)
    on left: 104, on right: 105
conditional_expr (198)
    on left: 106 108, on right: 108 109 125
$@8 (199)
    on left: 107, on right: 108
assignment_expr (200)
    on left: 109 110, on right: 41 44 45 57 58 110 122 124 273
assignment_operator (201)
    on left: 111 112 113 114 115 116 117 118 119 120 121, on right:
    110
expr (202)
    on left: 122 124, on right: 35 39 48 108 124 307 311 313 318 319
    324 329
$@9 (203)
    on left: 123, on right: 124
constant_expr (204)
    on left: 125, on right: 14 147 157 159 184 209 210 219 233 234
    235 236 237 265 267 278 292
declaration (205)
    on left: 126 127 128, on right: 6 302 303 322
declaration_specifiers (206)
    on left: 129, on right: 11 126 127 256 258 259
declaration_specifiers_ (207)
    on left: 130 131 132 133 134 135 136 137, on right: 129 131 133
    135 137
init_declarator_list (208)
    on left: 138 139, on right: 127 139
init_declarator (209)
    on left: 140 141, on right: 138 139
designation_opt (210)
    on left: 142 143, on right: 276 277
designation (211)
    on left: 144, on right: 143
designator_list (212)
    on left: 145 146, on right: 144 146
designator (213)
    on left: 147 148, on right: 145 146
storage_class_specifier (214)
    on left: 149 150 151 152 153, on right: 130 131
function_specifier (215)
    on left: 154 155, on right: 134 135
alignment_specifier (216)
    on left: 156 157, on right: 136 137
Interrupt_storage (217)
    on left: 158 159, on right: 24
type_qualifier (218)
    on left: 160 161 162 163 164 165 166 167 168 169, on right: 170
    171 172
type_qualifier_list (219)
    on left: 170 171, on right: 171 232 235 236 237
type_specifier (220)
    on left: 172 173 174 175 176 177 178 179 180 181 182 183 184 185
    186 187 188, on right: 132 133 248 249
sfr_reg_bit (221)
    on left: 189 190, on right: 188
sfr_attributes (222)
    on left: 191 192 193 194, on right: 190
struct_or_union_specifier (223)
    on left: 196 197, on right: 185
$@10 (224)
    on left: 195, on right: 196
struct_or_union (225)
    on left: 198 199, on right: 196 197
opt_stag (226)
    on left: 200 201, on right: 196
stag (227)
    on left: 202, on right: 197 200
struct_declaration_list (228)
    on left: 203 204, on right: 196 204
struct_declaration (229)
    on left: 205, on right: 203 204
struct_declarator_list (230)
    on left: 206 207, on right: 205 207
struct_declarator (231)
    on left: 208 209 210 211, on right: 206 207
enum_specifier (232)
    on left: 212 213 214, on right: 186
enumerator_list (233)
    on left: 215 216 217, on right: 212 213 216 217
enumerator (234)
    on left: 218, on right: 215 217
opt_assign_expr (235)
    on left: 219 220, on right: 218
declarator (236)
    on left: 221 222, on right: 140 141 208 210 230 256
declarator3 (237)
    on left: 223 224, on right: 221 222 231 232 233 234 235 236 237
function_declarator (238)
    on left: 225 226, on right: 9 11
declarator2_function_attributes (239)
    on left: 227 228, on right: 223 225 226
declarator2 (240)
    on left: 229 230 231 232 233 234 235 236 237, on right: 224 238
    240 241
function_declarator2 (241)
    on left: 238 240 241, on right: 227 228
$@11 (242)
    on left: 239, on right: 240
pointer (243)
    on left: 242 243 244 245, on right: 222 226 244 245 260 262
unqualified_pointer (244)
    on left: 246, on right: 242 243 244 245
type_specifier_list (245)
    on left: 247, on right: 205 243 245
type_specifier_list_ (246)
    on left: 248 249, on right: 247 249
identifier_list (247)
    on left: 250 251, on right: 29 241 251
parameter_type_list (248)
    on left: 252 253, on right: 240 269 272
parameter_list (249)
    on left: 254 255, on right: 252 253 255
parameter_declaration (250)
    on left: 256 257, on right: 254 255
type_name (251)
    on left: 258 259, on right: 44 64 65 67 75 156 257
abstract_declarator (252)
    on left: 260 261 262, on right: 259 263
abstract_declarator2 (253)
    on left: 263 264 265 266 267 268 269 270 272, on right: 261 262
    266 267 270 272
$@12 (254)
    on left: 271, on right: 272
initializer (255)
    on left: 273 274 275, on right: 141 276 277
initializer_list (256)
    on left: 276 277, on right: 274 275 277
static_assert_declaration (257)
    on left: 278, on right: 128
statement (258)
    on left: 279 280 281 282 283 284 285 286, on right: 288 289 304
    305 308 311 313 318 319 320 322
critical (259)
    on left: 287, on right: 288
critical_statement (260)
    on left: 288, on right: 285
labeled_statement (261)
    on left: 289 290, on right: 279
label (262)
    on left: 291 292 294, on right: 289 290
@13 (263)
    on left: 293, on right: 294
start_block (264)
    on left: 295, on right: 297 298 299 300
end_block (265)
    on left: 296, on right: 297 298 299 300
compound_statement (266)
    on left: 297 298 299 300 301, on right: 30 31 280
declaration_list (267)
    on left: 302 303, on right: 31 299 300 303
statement_list (268)
    on left: 304 305, on right: 298 300 305
expression_statement (269)
    on left: 306 307, on right: 281
else_statement (270)
    on left: 308 309, on right: 311
selection_statement (271)
    on left: 311 313, on right: 282
$@14 (272)
    on left: 310, on right: 311
@15 (273)
    on left: 312, on right: 313
while (274)
    on left: 314, on right: 318
do (275)
    on left: 315, on right: 319
for (276)
    on left: 316, on right: 320 322
iteration_statement (277)
    on left: 318 319 320 322, on right: 283
$@16 (278)
    on left: 317, on right: 318
$@17 (279)
    on left: 321, on right: 322
expr_opt (280)
    on left: 323 324, on right: 320 322
jump_statement (281)
    on left: 325 326 327 328 329, on right: 284
asm_string_literal (282)
    on left: 330, on right: 331
asm_statement (283)
    on left: 331 332, on right: 286
addressmod (284)
    on left: 333 334, on right: 7
identifier (285)
    on left: 335, on right: 32 34 36 52 54 148 202 213 214 218 229
    250 251 291 325 333 334


state 0

    0 $accept: . file $end

    IDENTIFIER      shift, and go to state 1
    TYPE_NAME       shift, and go to state 2
    ADDRSPACE_NAME  shift, and go to state 3
    TYPEDEF         shift, and go to state 4
    EXTERN          shift, and go to state 5
    STATIC          shift, and go to state 6
    AUTO            shift, and go to state 7
    REGISTER        shift, and go to state 8
    CODE            shift, and go to state 9
    EEPROM          shift, and go to state 10
    SFR             shift, and go to state 11
    SFR16           shift, and go to state 12
    SFR32           shift, and go to state 13
    ADDRESSMOD      shift, and go to state 14
    STATIC_ASSERT   shift, and go to state 15
    AT              shift, and go to state 16
    SBIT            shift, and go to state 17
    XDATA           shift, and go to state 18
    DATA            shift, and go to state 19
    IDATA           shift, and go to state 20
    PDATA           shift, and go to state 21
    SD_BOOL         shift, and go to state 22
    SD_CHAR         shift, and go to state 23
    SD_SHORT        shift, and go to state 24
    SD_INT          shift, and go to state 25
    SD_LONG         shift, and go to state 26
    SIGNED          shift, and go to state 27
    UNSIGNED        shift, and go to state 28
    SD_FLOAT        shift, and go to state 29
    FIXED16X16      shift, and go to state 30
    SD_CONST        shift, and go to state 31
    VOLATILE        shift, and go to state 32
    SD_VOID         shift, and go to state 33
    BIT             shift, and go to state 34
    STRUCT          shift, and go to state 35
    UNION           shift, and go to state 36
    ENUM            shift, and go to state 37
    INLINE          shift, and go to state 38
    NORETURN        shift, and go to state 39
    RESTRICT        shift, and go to state 40
    ALIGNAS         shift, and go to state 41
    '('             shift, and go to state 42
    '*'             shift, and go to state 43

    $default  reduce using rule 1 (file)

    file                             go to state 44
    program                          go to state 45
    external_definition              go to state 46
    function_definition              go to state 47
    declaration                      go to state 48
    declaration_specifiers           go to state 49
    declaration_specifiers_          go to state 50
    storage_class_specifier          go to state 51
    function_specifier               go to state 52
    alignment_specifier              go to state 53
    type_qualifier                   go to state 54
    type_specifier                   go to state 55
    sfr_reg_bit                      go to state 56
    sfr_attributes                   go to state 57
    struct_or_union_specifier        go to state 58
    struct_or_union                  go to state 59
    enum_specifier                   go to state 60
    declarator3                      go to state 61
    function_declarator              go to state 62
    declarator2_function_attributes  go to state 63
    declarator2                      go to state 64
    function_declarator2             go to state 65
    pointer                          go to state 66
    unqualified_pointer              go to state 67
    static_assert_declaration        go to state 68
    addressmod                       go to state 69
    identifier                       go to state 70


state 1

  335 identifier: IDENTIFIER .

    $default  reduce using rule 335 (identifier)


state 2

  187 type_specifier: TYPE_NAME .

    $default  reduce using rule 187 (type_specifier)


state 3

  163 type_qualifier: ADDRSPACE_NAME .

    $default  reduce using rule 163 (type_qualifier)


state 4

  149 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 149 (storage_class_specifier)


state 5

  150 storage_class_specifier: EXTERN .

    $default  reduce using rule 150 (storage_class_specifier)


state 6

  151 storage_class_specifier: STATIC .

    $default  reduce using rule 151 (storage_class_specifier)


state 7

  152 storage_class_specifier: AUTO .

    $default  reduce using rule 152 (storage_class_specifier)


state 8

  153 storage_class_specifier: REGISTER .

    $default  reduce using rule 153 (storage_class_specifier)


state 9

  165 type_qualifier: CODE .

    $default  reduce using rule 165 (type_qualifier)


state 10

  166 type_qualifier: EEPROM .

    $default  reduce using rule 166 (type_qualifier)


state 11

  191 sfr_attributes: SFR .
  192               | SFR . BANKED

    BANKED  shift, and go to state 71

    $default  reduce using rule 191 (sfr_attributes)


state 12

  193 sfr_attributes: SFR16 .

    $default  reduce using rule 193 (sfr_attributes)


state 13

  194 sfr_attributes: SFR32 .

    $default  reduce using rule 194 (sfr_attributes)


state 14

  333 addressmod: ADDRESSMOD . identifier identifier ';'
  334           | ADDRESSMOD . identifier SD_CONST identifier ';'

    IDENTIFIER  shift, and go to state 1

    identifier  go to state 72


state 15

  278 static_assert_declaration: STATIC_ASSERT . '(' constant_expr ',' STRING_LITERAL ')'

    '('  shift, and go to state 73


state 16

  184 type_specifier: AT . constant_expr

    IDENTIFIER      shift, and go to state 1
    CONSTANT        shift, and go to state 74
    SIZEOF          shift, and go to state 75
    ALIGNOF         shift, and go to state 76
    TYPEOF          shift, and go to state 77
    OFFSETOF        shift, and go to state 78
    INC_OP          shift, and go to state 79
    DEC_OP          shift, and go to state 80
    STRING_LITERAL  shift, and go to state 81
    GENERIC         shift, and go to state 82
    '('             shift, and go to state 83
    '&'             shift, and go to state 84
    '*'             shift, and go to state 85
    '+'             shift, and go to state 86
    '-'             shift, and go to state 87
    '~'             shift, and go to state 88
    '!'             shift, and go to state 89

    primary_expr         go to state 90
    generic_selection    go to state 91
    string_literal_val   go to state 92
    postfix_expr         go to state 93
    unary_expr           go to state 94
    unary_operator       go to state 95
    cast_expr            go to state 96
    multiplicative_expr  go to state 97
    additive_expr        go to state 98
    shift_expr           go to state 99
    relational_expr      go to state 100
    equality_expr        go to state 101
    and_expr             go to state 102
    exclusive_or_expr    go to state 103
    inclusive_or_expr    go to state 104
    logical_and_expr     go to state 105
    logical_or_expr      go to state 106
    conditional_expr     go to state 107
    constant_expr        go to state 108
    identifier           go to state 109


state 17

  189 sfr_reg_bit: SBIT .

    $default  reduce using rule 189 (sfr_reg_bit)


state 18

  164 type_qualifier: XDATA .

    $default  reduce using rule 164 (type_qualifier)


state 19

  167 type_qualifier: DATA .

    $default  reduce using rule 167 (type_qualifier)


state 20

  168 type_qualifier: IDATA .

    $default  reduce using rule 168 (type_qualifier)


state 21

  169 type_qualifier: PDATA .

    $default  reduce using rule 169 (type_qualifier)


state 22

  173 type_specifier: SD_BOOL .

    $default  reduce using rule 173 (type_specifier)


state 23

  174 type_specifier: SD_CHAR .

    $default  reduce using rule 174 (type_specifier)


state 24

  175 type_specifier: SD_SHORT .

    $default  reduce using rule 175 (type_specifier)

